# SMD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_en.md  make_figure.ipynb
bash/: build.bat  cuda.bat  eval_cube.bat  test_cube.bat  test_cuda.bat  test_ir.bat  test_iter.bat  test_robust.bat  test_selected.bat
docs/: usage.md
scripts/: cube_vis.py  dataset.py  ir_vis.py  kinect.py  printdata.py  refine_pd.py  thingi10K.py  thingi10K_nc.py  visualize.py
src/CS/: phase1.cc  phase1.hpp  phase2.jl
src/L0/: l0.cc  l0.hpp  main.cc  main.cu
src/L0CDF/: main.cc
src/L1CS/: smooth.cc  smooth.hpp
src/bilateral/: main.cc  main2.cc  main3.cc
src/utils/: add_noise.cc  metrics.cc
